# defaults

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  ts.pre-commit-config.yaml
.aiassistant/rules/: SQLModel.md  gitlab.md  python.md  textual.md  typer.md
