# UV Build tooling
[build-system]
requires = ["uv_build>=0.8.11"]
build-backend = "uv_build"

# RUFF settings
[tool.ruff]
target-version = "py313"
line-length = 99

[tool.ruff.lint]
select = [
  # https://docs.astral.sh/ruff/rules/
    "RUF",  # Ruff specific rules - https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
    "C",    # mccabe rules - https://pypi.org/project/mccabe/
    "F",    # pyflakes rules - https://pypi.org/project/pyflakes/
    "E",    # pycodestyle error rules - https://pypi.org/project/pycodestyle/
    "W",    # pycodestyle warning rules - https://pypi.org/project/pycodestyle/
    "N",    # Naming - https://pypi.org/project/pep8-naming/
    "A",    # builtins - https://docs.astral.sh/ruff/settings/#lintflake8-builtins
    "B",    # flake8-bugbear rules - https://docs.astral.sh/ruff/settings/#lintflake8-bugbear
    "I",    # isort rules - https://pypi.org/project/isort/
    "LOG",  # logging rules - https://pypi.org/project/flake8-logging/
    "PT",   # PyTest - https://pypi.org/project/flake8-pytest-style/
    "INP",  # no-pep420 - https://pypi.org/project/flake8-no-pep420/
    "ANN",  # annotation rules - https://pypi.org/project/flake8-annotations/
    "UP",   # pyupgrade - https://pypi.org/project/pyupgrade/
    "RET",  # returns - https://pypi.org/project/flake8-return/
    "SIM",  # simplify - https://pypi.org/project/flake8-simplify/
    "PLR",  # refactor - https://docs.astral.sh/ruff/rules/#refactor-plr
    "PLW",  # warnings - https://docs.astral.sh/ruff/rules/#warning-plw
    "FURB", # refurb - https://pypi.org/project/refurb/
    "ASYNC",# async - https://pypi.org/project/flake8-async/
    "DJ",   # django - https://pypi.org/project/flake8-django/
    "FAST", # fastapi - https://pypi.org/project/fastapi/
]
ignore = [
    # "C901",  # max-complexity-10
    "E501",  # line-too-long
]

# Rumdl settings
# This is a tool for formatting markdown files, it can be used to fix issues automatically.
[tool.rumdl]
line-length = 100

# LEGACY Formatting settings - Keeping these to allow for these tools to run compatibily with Ruff.
[tool.isort]
profile = "black"
line_length = 99
py_version=310
known_third_party = ["boto", "botocore", "django", "rest_framework"]

[tool.black]
line-length = 99
target-version = ['py311']
force-exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
    | migrations
)
'''
